- SCIPchgVarType got an extra boolean to store infeasibility while upgrading a variable from continuous type to an integer type
- added function SCIPaddCoefLogicor() to add a variable to a logic or constraint
- new methods SCIPhasPrimalRay() and SCIPgetPrimalRayVal() that return whether a primal ray is stored and
  which value a given variable has in the primal ray, respectively
- new method SCIPfindOrigCons() which return a original constraint with the given name or NULL
- new method SCIPgetReadingTime() which returns the time for reading in seconds
- new method SCIPconshdlrGetNAddConss() which returns the number of added constraints during presolving by a given constraint handler 
- new method SCIPpresolGetNAddConss() which returns the number of added constraints during presolving by a given presolver
- added two parameters to the callback methods SCIP_DECL_CONSPRESOL() and SCIP_DECL_PRESOLEXEC(), these are nnewaddconss and naddconss; these parameters
  are also added to corresponding C++ wrapper class methods; these scip_presol() in objconshdlr.h and scip_exec() in objpresol.h 

performance improvements:
- performance improvements in prop_vbounds
- child selection rules now get also applied when the relaxation value is equal to the bound changed in branching
- added dual reduction to cons_cumulative.c
- for continuous variables, the pseudo costs update and the pscost branching rule now use the same strategies for updating the pseudo costs and estimating the improvement in the LP bound
- only perform probing if the variables are locked
- performance and memory consumption improvements in xmlparse.c

fixed bugs:
- fixed bug in propagation of indicator constraints: cannot fix slack variable to 0 if linear constraint is disabled/not active
- fixed bug in cons_bounddisjunction where branching on multiaggregated variables was tried while all aggregation variables are fixed 
- fixed assertion in tree.c w.r.t. node estimation