@@ -4384,6 +4384,16 @@ SCIP_RETCODE SCIPgetLPBInvACol(
    SCIP_Real*            coef                /**< pointer to store the coefficients of the column */
    );
 
+/** gets primal ray of LP, if available */
+extern
+SCIP_RETCODE SCIPgetLPPrimalRay(
+   SCIP*                 scip,               /**< SCIP data structure */
+   SCIP_Real*            ray,                /**< array for storing primal ray values, or NULL to check only for availability of ray
+                                              *   ray values are stored w.r.t. the problem index of the variables,
+                                              *   so the size of this array should be at least number of active variables */
+   SCIP_Bool*            success             /**< pointer to store whether a primal ray was available and has been stored in ray */
+   );
+
 /** calculates a weighted sum of all LP rows; for negative weights, the left and right hand side of the corresponding
  *  LP row are swapped in the summation
  */
