@@ -36,6 +36,7 @@ interface:
 - added function SCIPaddCoefLogicor() to add a variable to a logic or constraint
 - new methods SCIPhasPrimalRay() and SCIPgetPrimalRayVal() that return whether a primal ray is stored and
   which value a given variable has in the primal ray, respectively
+- new method SCIPgetLPPrimalRay() that returns whether a primal ray for the LP is available and which values the variables have in the ray
 - new method SCIPfindOrigCons() which return a original constraint with the given name or NULL
 - new method SCIPgetReadingTime() which returns the time for reading in seconds
 - new method SCIPconshdlrGetNAddConss() which returns the number of added constraints during presolving by a given constraint handler 
